# t-fors

./: .env.shared  .gitignore  README.md  docker-compose.yml  pyproject.toml  todo.md
app/: .dockerignore  0_🏠_Home.py  Dockerfile  model.py  plot.py  pyproject.toml  var.py
app/assets/data/: df_eval.pickle
app/assets/models/836438889763744696/47379e58abff4b18989898a5b6ecbe08/: model.cb
app/pages/: 1_📊_Data.py  2_🔮_ML_model.py
images/: hyp_importances.html  opt_history.html  shap_stability.html
jupyters/: .dockerignore  0_0_preprocess.ipynb  0_0_preprocess_new.ipynb  0_0_preprocess_real_time.ipynb  0_1_time_series_analysis.ipynb  0_2_clustering.ipynb  0_preprocess.ipynb  1_1_catboost.ipynb  1_2_lstm.ipynb  1_3_shap_stability.ipynb  1_4_minimal_L1.ipynb  1_catboost.ipynb  2_1_model_calibration.ipynb  3_validation_ebro.ipynb  4_eswua.ipynb  4_plot_paper.ipynb  5_persistence_benchmark.ipynb  Dockerfile  iva_cal_model.pkl  pyproject.toml  var.py
mlruns/836438889763744696/bfb81fc4f057443eaa8aaf808d39951c/artifacts/model/: model.cb
mlruns/836438889763744696/ed451d15e8094aa593f44d07bc77696d/artifacts/model/: model.cb
models/catboost/: classifier_new_feature_optuna  classifier_optuna  classifier_sqrt_blcd_opt  classifier_sqrt_blcd_opt_new_features
scripts/: run-jupyter.ps1  run-mlflow-ui.ps1  run-uvicorn.ps1
src/: .dockerignore  Dockerfile  __init__.py  api.py  cert.py  forecast.py  io.py  model.py  opt.py  preprocess.py  pyproject.toml  var.py
src/api/: api.py  utils.py
src/assets/data/: feature_importances.pickle  y_cal.pkl
src/assets/models/: model.cb
src/backend/: __init__.py  io.py  preprocess.py  utils.py  validation.py
src/model/: __init__.py  calibration.py  model.py  opt.py
