[tool.poetry]
name = "t-fors"
version = "0.1.0"
description = "Traveling Ionospheric Disturbances Forecasting System"
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/viventriglia/t-fors"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
shap = "^0.43.0"
pymc = "^5.0.2"
jupyter = "^1.0.0"
notebook = "6.5.3"
traitlets = "5.9.0"
black = "^22.3.0"
mypy = "^0.950"
statsmodels = "^0.14.0"
pvlib = "^0.10.2"
optuna = "^3.5.0"
mlflow = "^2.9.2"
stumpy = "^1.12.0"
seaborn = "^0.13.2"
keras = "^3.0.4"
jax = {extras = ["cpu"], version = "^0.4.24"}


[tool.poetry.group.dev.dependencies]
umap-learn = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
