[tool.poetry]
name = "t-fors-web-app"
version = "0.1.0"
description = "Traveling Ionospheric Disturbances Forecasting System"
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/viventriglia/t-fors"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
black = "^22.3.0"
mypy = "^0.950"
streamlit = "^1.31.1"
catboost = "^1.2.7"
shap = "^0.46.0"
umap-learn = "^0.5.7"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
