[tool.poetry]
name = "t-fors-repl"
version = "0.1.0"
description = "Traveling Ionospheric Disturbances Forecasting System"
authors = ["Vincenzo <vincenzo.ventriglia@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/viventriglia/t-fors"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
shap = "^0.46.0"
black = "^22.3.0"
mypy = "^0.950"
pvlib = "^0.10.2"
optuna = "^3.5.0"
mlflow = "^2.9.2"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
notebook = "6.5.3"
traitlets = "5.9.0"
venn-abers = "^1.4.6"
quarto = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
